Fixed margin of image on smartphone + Improved code readability SRFCMSAL-2501

--- a/source/_patterns/20-molecules/podcast-details/podcast-details.scss
+++ b/source/_patterns/20-molecules/podcast-details/podcast-details.scss
@@ -8,24 +8,28 @@
 .podcast-details__image {
   width: 112px;
   height: 112px;
-  margin: 0 24px 16px 0;
+  margin: 0 12px 16px 0;
 
   @include tablet-up {
-    margin-right: 12px;
     position: absolute;
     left: 0;
+    margin: 0 24px 16px 0;
   }
 }
 
 .podcast-details__header {
   flex-basis: calc(100% - (112px + 24px));
+
+  @include smartphone() {
+    flex-basis: calc(100% - (112px + 12px));
+  }
 }
 
 .podcast-details__content {
-  flex-basis: 100%;
+  flex-basis: calc(100% - (112px + 24px));
 
-  @include tablet-up {
-    flex-basis: calc(100% - (112px + 24px));
+  @include smartphone {
+    flex-basis: 100%;
   }
 }
 
